Atualiza configuração do Docker Compose para incluir serviço PostgreSQL e ajusta o arquivo index.html com novas meta tags e estrutura. O serviço PostgreSQL foi adicionado com variáveis de ambiente e volumes para persistência de dados.

--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <title>Página Inicial</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <h1>Bem-vindo ao Nginx com Docker Compose!</h1>
-    <p>Esta é a página inicial servida pelo Nginx.</p>
+    <div class="container">
+        <header>
+            <h1>Bem-vindo ao Nginx com Docker Compose!</h1>
+            <p>Esta é a página inicial servida pelo Nginx.</p>
+        </header>
+    </div>
 </body>
 
 </html>
