--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="light dark">
     <title>Página Inicial</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -14,6 +14,8 @@
         <header>
             <h1>Bem-vindo ao Nginx com Docker Compose!</h1>
             <p>Esta é a página inicial servida pelo Nginx.</p>
+            <img src="images/google-logo.png" alt="Google Logo"><br />
+            <video src="videos/v1.mp4" controls width="300" type="video/mp4"></video>
         </header>
     </div>
 </body>
